# esm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  _Makefile  esm.cpp  esm.h  main.cpp  maincli.cpp  maingui.cpp
esm_emu/: esmcore.h  esmdebug.cpp  esmdebug.h
gui/: gui.h  guistuff.cpp  guiwindows.cpp
src/: main.cpp  main.h  main_imgui.cpp  maincli.cpp  maingui.cpp
src/esm_emu/: esmdebug.cpp  esmdebug.h
src/gui/: gui.h  guistuff.cpp  guiwindows.cpp
